[workspace]
resolver = "2"
members = ["cube"]

[package]
name = "cubecli"
description = "Universal GameCube file format tool"
repository = "https://github.com/mayabyte/cube"
license = "MIT"
readme = "../README.md"
version = "0.1.0"
edition = "2021"
authors = ["Maya Hayden <mayahayden@protonmail.com>"]

[[bin]]
name = "cube"
path = "src/main.rs"

[dependencies]
cube = { path = "cube", version = "0.1.0" }
clap = {version="4.5", features=["derive"]}
image = "0.24"