[package]
name = "cube"
description = "Universal GameCube file format tool"
repository = "https://github.com/mayabyte/cube"
license = "MIT"
readme = "../README.md"
version = "0.1.0"
edition = "2021"
authors = ["Maya Hayden <mayahayden@protonmail.com>"]

[lib]
name = "cube"

[dependencies]
yaz0 = "0.3"
gc-gcm = "0.10"
encoding_rs = "0.8"