[package]
name = "cube_rs"
description = "Universal GameCube file format tool"
repository = "https://github.com/mayabyte/cube"
license = "MIT"
readme = "../README.md"
version = "0.2.1"
edition = "2021"
authors = ["Maya Hayden <mayahayden@protonmail.com>"]

[lib]
name = "cube_rs"
path = "src/lib.rs"

[dependencies]
yaz0 = "0.3"
gc-gcm = "0.10"
encoding_rs = "0.8"
itertools = "0.13"